finished navbar and banner. Need to fix box alignment in hero.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,7 @@ html {
 }
 
 .container {
+  display: flex;
   width: 960px;
   margin: auto;
 }
@@ -12,6 +13,7 @@ html {
 .navbar {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   background-color: cadetblue;
   font-size: 1rem;
@@ -21,12 +23,32 @@ html {
 
 .logo {
   display: flex;
-  margin: auto 1rem auto 1rem;
+  margin-right: 1rem;
   height: 1.51rem;
 }
 
-.nav-items  {
+nav .nav-items  {
+  margin: 1rem;
+}
+
+.hero {
+  height: 30rem;
+  background-image: url("../../resources/images/glasses-bg.png");
+  background-size: cover;
+}
+
+.box {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
+  background-color: white;
+  padding: 1.5rem 5rem;
+  margin-top: 10rem;
+  width: 35%;
+}
+
+.headline {
+  display: flex;
+  font-size: 2rem;
+  line-height: 1.2;
 }
